# dc_crime

./: .gitignore  README.md  SETUP_COMPLETE.md  config.py  pyproject.toml
.github/workflows/: analysis.yml
data/processed/: all_assaults.csv  all_burglaries.csv  all_homicides.csv  assault_data.csv  burglary_data.csv  car_theft_data.csv  crime_arson_by_ward_year.csv  crime_assault_w_dangerous_weapon_by_ward_year.csv  crime_burglary_by_ward_year.csv  crime_by_ward_year_offense_comprehensive.csv  crime_homicide_by_ward_year.csv  crime_motor_vehicle_theft_by_ward_year.csv  crime_offense_since_aug11.csv  crime_offense_yearly.csv  crime_offense_ytd.csv  crime_robbery_by_ward_year.csv  crime_sex_abuse_by_ward_year.csv  crime_theft_f_auto_by_ward_year.csv  crime_theft_other_by_ward_year.csv  gun_crimes_data.csv  homicide_data.csv  homicides_by_ward_year_with_totals.csv  offense_by_ward_year.csv  robbery_data.csv
docs/: all_crimes_combined_map.html  all_crimes_combined_map_with_feds.html  assault_map.html  assault_map_grid.html  assaults_map.html  burglaries_map.html  burglary_map.html  burglary_map_grid.html  car_theft_map.html  car_theft_map_grid.html  car_thefts_map.html  dc_crime_map.html  dc_grid_cells_low_crime_map.html  grid_crime_maps.html  gun_crimes_map.html  gun_crimes_map_grid.html  homicide_map.html  homicide_map_grid.html  homicides_map.html  robberies_map.html  robbery_map.html  robbery_map_grid.html
notebooks/: 00_exploratory_data_analysis.ipynb  dc_crime_grid_analysis.ipynb  dc_crime_incidents.ipynb
utils/: __init__.py  data_utils.py  journalism_utils.py
(+7 files in other folders)
